logs/20250514_145735.log
Hello,DirectX!

WSTRING1280

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:20:19: error: functions that differ only in their return type cannot be overloaded
PixelShaderOutput main()
~~~~~~~~~~~~~~~~~ ^
Object3D.VS.hlsl:10:20: note: previous definition is here
VertexShaderOutput main(VertexShaderInput input)
~~~~~~~~~~~~~~~~~~ ^

